--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,13 @@
   pointer-events: none;
   opacity: 0.7;
 }
+
+.footer-bottom {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.main-body {
+  padding-bottom: 100px;
+}
